# gauge-pybuild-plugin

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  UV_SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: example_usage.py  uv_usage.md
src/gauge_pybuild_plugin/: __init__.py  cli.py  core.py  poetry_plugin.py  setuptools_command.py
tests/: conftest.py  test_cli.py  test_core.py
