[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata (PEP 621 - standard format, works with UV and Poetry)
[project]
name = "gauge-pybuild-plugin"
version = "0.1.0"
description = "Python build plugin for Gauge testing framework - Poetry, UV, and setuptools integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["gauge", "testing", "automation", "poetry", "uv", "setuptools", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0.0",
    "toml>=0.10.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
poetry = ["poetry>=1.4.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
gauge-py = "gauge_pybuild_plugin.cli:main"

[project.urls]
Homepage = "https://github.com/lirany1/gauge-pybuild-plugin"
Repository = "https://github.com/lirany1/gauge-pybuild-plugin"
Documentation = "https://github.com/lirany1/gauge-pybuild-plugin"
Issues = "https://github.com/lirany1/gauge-pybuild-plugin/issues"

[project.entry-points."poetry.plugin"]
gauge = "gauge_pybuild_plugin.poetry_plugin:GaugePoetryPlugin"

[project.entry-points."distutils.commands"]
gauge = "gauge_pybuild_plugin.setuptools_command:GaugeCommand"

# Poetry compatibility (for users still using Poetry)
[tool.poetry]
name = "gauge-pybuild-plugin"
version = "0.1.0"
description = "Python build plugin for Gauge testing framework - Poetry, UV, and setuptools integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
toml = "^0.10.2"
pydantic = "^2.0.0"
poetry = {version = "^1.4.0", optional = true}

[tool.poetry.extras]
poetry = ["poetry"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
gauge-py = "gauge_pybuild_plugin.cli:main"

[tool.poetry.plugins."poetry.plugin"]
gauge = "gauge_pybuild_plugin.poetry_plugin:GaugePoetryPlugin"

[tool.poetry.plugins."distutils.commands"]
gauge = "gauge_pybuild_plugin.setuptools_command:GaugeCommand"

# Ruff configuration (modern, fast linter - replaces flake8, isort, black)
[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N805"]  # Allow cls as first argument for Pydantic validators

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=gauge_pybuild_plugin --cov-report=html --cov-report=term-missing"